# myos

./: .gitignore  CMakeLists.txt  build.sh
MikanLoaderPkg/: Loader.inf  Main.c
kernel/: asmfunc.asm  asmfunc.hpp  console.cpp  console.hpp  error.hpp  font.cpp  font.hpp  frame_buffer_config.hpp  graphics.cpp  graphics.hpp  interrupt.cpp  interrupt.hpp  libcxx_support.cpp  logger.cpp  logger.hpp  main.cpp  memory_map.hpp  mouse.cpp  mouse.hpp  newlib_support.c  pci.cpp  pci.hpp  queue.hpp  register.hpp  segment.cpp  segment.hpp  usb  x86_descriptor.hpp
